
NEWS:


NEW: [features/improvements]
+Improved Python auto-indenter (patch from Ofer Schwarz)
+Show auto-completion choices with Ctrl+Space (patch from Ofer Schwarz)
+Add Paste After command (patch from Dario Ghilardi)
+Report number of matches that were replaced in a Replace All action
+Expand groups when doing a regular expression search and replace
+Add Polish and Slovenian translations

BUG FIXES:
+Fix not being able to cut and copy from Shelf windows
+Fix bug in selecting Cancel when prompted to save modifications that would
 cause the editor to block paint events and appear frozen.
+Ctrl+W properly closes the active window instead of always defaulting to the
 tab of the top MainWindow.
+Fix not being able to search for strings with '.' in them in non-regex mode
+Fix bug in Launch output sometimes missing output data
+Fix inaccurate highlighting of words when doing incremental whole word search
+Fix regex not working with '^' (patch from craig.ds)

#-----------------------------------------------------------------------------#

VERSION 0.3.90
DATE 11/03/2008
16th Alpha Release

NEWS:
This is primarly a bug fix release which fixes a number of bugs. A few new
features and improvements have also been added to improve usability. This is
also the first release to be compatible with Python 2.6.

NEW: [features/improvements]
+Python 2.6 compatibility
+Updated CodeBrowser with support for C++ and D
+Updated Launch plugin with support for D
+Add option for enable/disable regex search in quick find bar
+Automatically expire status bar info messages after 10 seconds
+Persist 5 most recent search locations between sessions
+Add option to auto-trim trailing whitespace when saving file
+Add Valencian translation
+New version of Launch (add support for D)
+Improved OSX cursor movement keybinding compliance (patch from Joe Strout)
+Improved search output window to include search term and options in output

BUG FIXES: